# loginAndRegistration

./: .gitignore  BackgroundCard.qml  BackgroundImage.qml  BackupDataPage.qml  BoxBackground.qml  CMakeLists.txt  DashboardPage.qml  DeleteConfirmationDialog.qml  EditPage.qml  LoginPage.qml  Main.qml  RegisterPage.qml  RegistrationSuccessDialog.qml  ReturnButton.qml  UserAbstractListViewPage.qml  UserAbstractTableViewPage.qml  UserListModel.qml  UserListViewPage.qml  UserTableModel.qml  UserTableViewPage.qml  assets.qrc  databasemanager.cpp  databasemanager.h  filemanager.cpp  filemanager.h  main.cpp  userabstractlistmodel.cpp  userabstractlistmodel.h  userabstracttablemodel.cpp  userabstracttablemodel.h  userdata.h
database/: schema.sql
